# Stable-Diffusion-Infra

./: .claudeignore  .gitignore  CLAUDE.md  Makefile  PROJECT_SPEC.md  README.md  pyproject.toml
artifacts/: registry.py  storage.py
config/: .env.example
docker/: Dockerfile.inference  Dockerfile.training  docker-compose.yml
inference/: manager.py
inference/api/: routes.py  schemas.py  server.py
inference/worker/: pipeline.py  queue.py  worker.py
monitoring/: logging.py  metrics.py
scripts/: download_model.py  generate.py  load_test.py  serve_local.sh
tests/integration/: test_generate.py
tests/unit/: test_queue.py  test_registry.py  test_schemas.py
training/: dataset.py  lora.py  train.py  trainer.py
training/config/: full_unet.yaml  lora.yaml
